--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --theme-bg-1: black;
+  --theme-bg-1: #111111;
   --theme-bg-2: #151515;
   --theme-bg-3: #2d2d2d;
   --theme-color-1: #abaaaa;
